# mlb-standings

./: .gitignore  Dockerfile  Dockerfile.merged  README.md  RUNNING-LOCALLY  RUNNING-MYPY  TODO.md  constants.py  deploy-gcf.sh  deploy-local.sh  deploy.sh  dev-requirements.txt  fake-spreadsheet.py  installed.txt  neo-cron-script  old-dev-requirements.txt  playing-with-charts.md  pyproject.toml  requirements.txt  requirements.txt.minimal  spreadsheet.py  trigger.sh  update.py
.github/workflows/: ci.yml
pyi/: google.pyi
pyi/functions_framework/: __init__.pyi  _cli.pyi  _function_registry.pyi  _typed_event.pyi  background_event.pyi  event_conversion.pyi  exceptions.pyi
pyi/functions_framework/_http/: __init__.pyi  flask.pyi  gunicorn.pyi
pyi/google/auth/: __init__.pyi  _default.pyi  credentials.pyi
pyi/google/auth/transport/: __init__.pyi  requests.pyi
pyi/google/oauth2/: credentials.pyi
pyi/google_auth_oauthlib/: flow.pyi
pyi/googleapiclient/: discovery.pyi
pyi/mlbstandings/: baseballref.pyi  google.pyi  typing_protocols.pyi  updater.pyi
sample-charts/: chart-1084076768.json  chart-1099696783.json  chart-1381496931.json  chart-1557600002.json  chart-335303495.json  chart-411882614.json  chart-844703581.json  chart-974868615.json
scripts/: dump_charts.py  grab_post_season.py  main.py  modify_charts.py  new_year.py  run_main.py  sheet_sample.py
small/: .gcloudignore  main.py  requirements-new.txt  requirements-old.txt  requirements.txt
src/: .gcloudignore  Dockerfile  baseballref.py  dump_charts.py  google.py  grab_post_season.py  lenient-pinned-auth-for-6.txt  lenient-pinned-for-3.txt  lenient-pinned-for-4.txt  lenient-pinned-for-5.txt  lenient.txt  local.py  main.py  modify_charts.py  new_year.py  requirements-0-minimal-new-fails.txt  requirements-0-original-old-works.txt  requirements-1-all-new-fails.txt  requirements-1-new-only-urllib3.txt  requirements-2-all-new-no-functions-framework-fails.txt  requirements-2-old-only-urllib3-works.txt  requirements-3-mostly-new-but-pin-rootset-at-old-works.txt  requirements-3-tiny-new-urllib3-fails.txt  requirements-3-tiny-old-urllib3.txt  requirements-4-mostly-new-pin-three-old-fails.txt  requirements-4-new-no-requests-fails.txt  requirements-5-mostly-new-pinned-five-works.txt  requirements-5-old-no-requests-works.txt  requirements-6-pinned-auth-works.txt  requirements-lenient.txt  requirements-new-except-auth.txt  requirements-new-urllib3.txt  requirements-old.txt  requirements-strict.txt  requirements.txt  run_main.py  sheet_sample.py  spreadsheet.py  start.py  tiny.py  (+3 more)
src/mlb_standings/: main.py  start.py
src/mlb_standings/mlbstandings/: abstract_rate_limited_web.py  typing_protocols.py
src/mlbstandings/: abstract_rate_limited_web.py  app.py  baseballref.py  google.py  google_wrappers.py  helpers.py  light_google_wrappers.py  rate_limiter.py  service.py  shared_types.py  spreadsheet.py  typing_protocols.py  updater.py  web.py
src/pyi/: baseballref.pyi  spreadsheet.pyi  updater.pyi
test-data/: 2023-schedule.shtml  ARI.shtml  ATH.shtml  ATL.shtml  BAL.shtml  BOS.shtml  CHC.shtml  CHW.shtml  CIN.shtml  CLE.shtml  COL.shtml  DET.shtml  HOU.shtml  KCR.shtml  LAA.shtml  LAD.shtml  MIA.shtml  MIL.shtml  MIN.shtml  NYM.shtml  NYY.shtml  OAK.shtml  PHI.shtml  PIT.shtml  README.md  SDP.shtml  SEA.shtml  SFG.shtml  STL.shtml  TBR.shtml  TEX.shtml  TODO.md  TOR.shtml  WSN.shtml  boxes-2023-03-30.html  boxes-2023-03-31.html  boxes-2023-04-01.html  boxes-2023-04-02.html  boxes-2023-04-03.html  boxes-2023-04-04.html  (+33 more)
test-data/test_empty_before_opening_day_sheet/: named_ranges.json
test-data/test_empty_before_opening_day_spreadsheets/2023/: named_ranges.json
test-data/test_empty_before_opening_day_spreadsheets/contents/: named_ranges.json
test-data/test_zero_row_multiple_days_done_sheet/: named_ranges.json  nl_uploaded.csv
test-data/test_zero_row_multiple_days_done_spreadsheets/2023/: al_uploaded.csv  named_ranges.json
tests/: fakes.py  fixtures.py  one-row.py  test_baseballref.py  test_something.py  test_true.py  test_updater.py
