[project]
name = "mlb-standings"
version = "0.1.0"
description = "Automatically maintain spreadsheet with MLB standings graphs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1,<3",
    "beautifulsoup4>=4.13.4,<5",
    "functions-framework>=3.8.3,<4",
    "google-auth>=2.40.3,<3",
    "google-cloud-secret-manager>=2.24.0,<3",
    "requests>=2.32.4,<3",
    "urllib3>=1.26.20,<2",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1,<2",
    "pyright>=1.1.402",
    "pytest>=8.4.1,<9",
    "pytest-datafiles>=3.0.0,<4",
    # "types-beautifulsoup4>=4.12.0.20250516,<5",
    "types-requests>=2.31.0.6,<3",
]

[project.scripts]
mlb-standings = "mlb_standings:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
]
