[project]
name = "mlbstandings"
version = "0.1.0"
description = "Automatically maintain spreadsheet with MLB standings graphs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1,<3",
    "beautifulsoup4>=4.13.4,<5",
    "functions-framework>=3.8.3,<4",
    "google-auth>=2.40.3,<3",
    "google-cloud-secret-manager>=2.24.0,<3",
    "requests>=2.32.4,<3",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "basedpyright>=1.29.5",
    "epc>=0.0.5",
    "mypy>=1.16.1,<2",
    "orjson>=3.10.18",
    "packaging>=25.0",
    "paramiko>=3.5.1",
    "pyright>=1.1.402",
    "pytest>=8.4.1,<9",
    "pytest-datafiles>=3.0.0,<4",
    "rapidfuzz>=3.13.0",
    "ruff>=0.12.2",
    "setuptools>=80.9.0",
    "sexpdata>=1.0.2",
    "six>=1.17.0",
    "types-beautifulsoup4>=4.12.0.20250516,<5",
    "types-requests>=2.31.0.6,<3",
    "watchdog>=6.0.0",
]

[project.scripts]
serve = "mlbstandings.service:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
]
