[project]
name = "mlbstandings"
version = "0.1.0"
description = "Automatically maintain spreadsheet with MLB standings graphs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1,<3",
    "beautifulsoup4>=4.13.4,<5",
    "functions-framework>=3.8.3,<4",
    "google-auth>=2.40.3,<3",
    "google-cloud-secret-manager>=2.24.0,<3",
    "requests>=2.32.4,<3",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1,<2",
    "pyright>=1.1.402",
    "pytest>=8.4.1,<9",
    "pytest-datafiles>=3.0.0,<4",
    # "types-beautifulsoup4>=4.12.0.20250516,<5",
    "ruff>=0.12.2",
    "types-requests>=2.31.0.6,<3",
]

[project.scripts]
serve = "mlbstandings.service:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
]

[tool.ruff.lint]

select = [
    "ALL",
]

# wip
ignore = [
    # TODO: TBD or future work
    "A",
    "ANN",
    "BLE",
    "C4",
    "C90",
    "DTZ",
    "E501",   # line-too-long
    "FBT",
    "N",
    "PERF",
    "PGH",
    "PLR",
    "PT",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T20",
    "TRY",
    "UP",

    # ... need to go through the list ...

    # Real
    "COM812", # missing-trailing-comma -- let the formatter deal with it
    "D",      # pydocstyle
    "ERA",    # eradicate
    "FIX002", # line-contains-todo
    "T201",   # print
    "TC006",  # runtime-cast-value
    "TD002",  # missing-todo-author
    "TD003",  # missing-todo-link
    "TRY002", # raise-vanilla-class
    "TRY003", # raise-vanilla-args
]

# Fine tuning:
# scripts/ruff-all.sh check --output-format=concise . | grep -v '^Found ' | grep -v 'fixable with the'   |   cut -d ' ' -f 2-  | sort | uniq -c | sort -n
# extend-select = [ "ALL" ]

# select = [ "ALL" ]
# select = [ "..." ]
# extend-select = [ ... ]
# select = ["F", "E", "B", "Q" ]
# select = ["ALL"]


[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = ["S101"]  # assertions

# [tool.ruff.lint.per-file-ignores]
# "tests/**/*.py" = ["ARG001", "PLR2004"]  # Tests can use fixtures

# [tool.ruff.lint.mccabe]
# max-complexity = 10

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
lines-after-imports = 2
